--- a/resources/views/requests/index.twig
+++ b/resources/views/requests/index.twig
@@ -5,7 +5,7 @@
 {% block content %}
     <p class="lead text-center">
         A total of <strong>{{ requests.count() }}</strong> RFCs have been created, <strong>{{ voted.count() }}</strong> have been voted on.<br>
-        In total, <strong>{{ percentage(passed) }}%</strong> have passed.
+        In total, <strong>{{ percentage(passed) }}</strong> have passed.
     </p>
 
     {% include '_partials/search.twig' %}
@@ -28,7 +28,7 @@
                         <a href="/requests/{{ request.id }}">{{ request.name }}</a>
                     </td>
                     <td class="text-right">{{ request.votes.count() }}</td>
-                    <td class="text-right">{{ percentage(request.approval) }}%</td>
+                    <td class="text-right">{{ percentage(request.approval) }}</td>
                     <td class="text-center">{{ request.created_at.toDateString() }}</td>
                     <td class="text-center {{ request.passed ? 'success' : 'danger' }}">{{ request.votes.count() ? (request.passed ? 'Yes' : 'No') : 'N/A' }}</td>
                 </tr>
