--- a/resources/views/users/show.twig
+++ b/resources/views/users/show.twig
@@ -12,8 +12,8 @@
 
 {% block content %}
     <p class="lead text-center">
-        This user created {{ user.requests.count() }} RFCs.<br>
-        He/She also voted <strong>{{ user.total_votes }}</strong> times, and has been correct <strong>{{ percentage(user.hivemind) }}%</strong> of the time.<br>
+        This user created <strong>{{ user.requests.count() }}</strong> RFCs.<br>
+        He/She also voted <strong>{{ user.total_votes }}</strong> times, and has been correct <strong>{{ percentage(user.hivemind) }}</strong> of the time.<br>
         <a target="_blank" href="http://people.php.net/{{ user.name }}">View his profile on phppeople</a>
     </p>
 
@@ -35,7 +35,7 @@
                         <td>
                             <a href="/requests/{{ request.id }}">{{ request.name }}</a>
                         </td>
-                        <td class="text-right">{{ percentage(request.approval) }}%</td>
+                        <td class="text-right">{{ percentage(request.approval) }}</td>
                         <td class="text-center">{{ request.created_at.toDateString() }}</td>
                     </tr>
                 {% endfor %}
@@ -65,7 +65,7 @@
                     </td>
                     <td>{{ vote.question.name }}</td>
                     <td class="text-right">{{ choice(vote.question, vote) }}</td>
-                    <td class="text-right">{{ percentage(vote.question.approval) }}%</td>
+                    <td class="text-right">{{ percentage(vote.question.approval) }}</td>
                     <td class="text-right">{{ vote.question.majority_choice == vote.choice ? 'Yes' : 'No' }}</td>
                 </tr>
             {% endfor %}
