--- a/resources/views/requests/index.twig
+++ b/resources/views/requests/index.twig
@@ -9,31 +9,5 @@
     </p>
 
     {% include '_partials/search.twig' %}
-
-    <div class="table-responsive">
-        <table class="table table-striped table-condensed table-hover">
-            <thead>
-            <tr>
-                <th>Name</th>
-                <th class="text-right"># of votes</th>
-                <th class="text-right">Approval %</th>
-                <th class="text-center">Last update</th>
-                <th class="text-center">Status</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for request in voted %}
-                <tr>
-                    <td>
-                        <a href="/requests/{{ request.id }}">{{ request.name }}</a>
-                    </td>
-                    <td class="text-right">{{ request.votes.count() }}</td>
-                    <td class="text-right">{{ percentage(request.approval) }}</td>
-                    <td class="text-center">{{ request.created_at.toDateString() }}</td>
-                    <td class="text-center {{ ['danger', '', 'success'][request.status] }}">{{ request.status_label }}</td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
-    </div>
+    {% include '_partials/tables/requests.twig' with {requests: voted} %}
 {% endblock %}
