--- a/resources/views/users/show.twig
+++ b/resources/views/users/show.twig
@@ -18,29 +18,7 @@
     </p>
 
     {% if user.requests.count() %}
-        <div class="table-responsive">
-            <table class="table table-condensed table-hover table-striped">
-                <thead>
-                <tr>
-                    <th class="text-center" colspan="5">Created RFCs</th>
-                </tr>
-                <tr>
-                    <th>RFC</th>
-                    <th class="text-right">Approval %</th>
-                    <th class="text-center">Last update</th>
-                </tr>
-                </thead>
-                {% for request in user.requests %}
-                    <tr>
-                        <td>
-                            <a href="/requests/{{ request.id }}">{{ request.name }}</a>
-                        </td>
-                        <td class="text-right">{{ percentage(request.approval) }}</td>
-                        <td class="text-center">{{ request.created_at.toDateString() }}</td>
-                    </tr>
-                {% endfor %}
-            </table>
-        </div>
+        {% include '_partials/tables/requests.twig' with {requests: user.requests, table_name: 'Created RFCs'} %}
     {% endif %}
 
     <div class="table-responsive">
