--- a/resources/views/users/show.twig
+++ b/resources/views/users/show.twig
@@ -12,16 +12,23 @@
 
 {% block content %}
     <ul class="list-unstyled lead text-center">
-        <li>This user created <strong>{{ user.requests.count() }}</strong> RFCs.</li>
+        <li>Created <strong>{{ user.requests.count() }}</strong> RFCs.</li>
         <li>
-            This user voted <strong>{{ user.total_votes }}</strong> times, and has been correct
+            Voted <strong>{{ user.total_votes }}</strong> times, and has been correct
             <strong>{{ percentage(user.hivemind) }}</strong> of the time.
         </li>
         <li>
             {% if user.negativeness >= 0.5 %}
-                This user has voted <strong>No</strong> on <strong>{{ percentage(user.negativeness) }}</strong> of the matters he voted on.
+                Has voted <strong>negatively</strong> on <strong>{{ percentage(user.negativeness) }}</strong> of the matters he voted on.
             {% else %}
-                This user has voted <strong>Yes</strong> on <strong>{{ percentage(1 - user.negativeness) }}</strong> of the matters he voted on.
+                Has voted <strong>positively</strong> on <strong>{{ percentage(1 - user.negativeness) }}</strong> of the matters he voted on.
+            {% endif %}
+        </li>
+        <li>
+            {% if user.contributions is not empty %}
+                Has made <strong>{{ user.contributions|length }}</strong> contributions ({{ user.contributions|slice(1, 3)|join(', ') }}, etc.)
+            {% else %}
+                Has <strong>no</strong> listed contributions.
             {% endif %}
         </li>
         <li>
