--- a/resources/views/users/show.twig
+++ b/resources/views/users/show.twig
@@ -26,7 +26,7 @@
         </li>
         <li>
             {% if user.contributions is not empty %}
-                Has made <strong>{{ user.contributions|length }}</strong> contributions ({{ user.contributions|slice(1, 3)|join(', ') }}, etc.)
+                Contributed to <strong>{{ user.contributions|length }}</strong> projects ({{ user.contributions|slice(1, 3)|join(', ') }}, etc.)
             {% else %}
                 Has <strong>no</strong> listed contributions.
             {% endif %}
