--- a/resources/views/_partials/search.twig
+++ b/resources/views/_partials/search.twig
@@ -1,1 +1,1 @@
-<input type="text" placeholder="Search..." class="layout-search form-control" data-column="0">
+<input id="search" type="text" placeholder="Search..." class="layout-search form-control">
