--- a/resources/views/users/index.twig
+++ b/resources/views/users/index.twig
@@ -1,5 +1,5 @@
 {% extends '_layouts/layout.twig' %}
-{% set subtitle = 'Users' %}
+{% set title = 'Users' %}
 
 {% block content %}
     {% include '_partials/search.twig' %}
