More work on timeline

--- a/resources/assets/sass/styles.scss
+++ b/resources/assets/sass/styles.scss
@@ -3,6 +3,7 @@
 
 @import 'components/explanations';
 @import 'components/tables';
+@import 'components/timeline';
 
 @import 'layout/header';
 @import 'layout/navbar';
