--- a/resources/views/events/index.twig
+++ b/resources/views/events/index.twig
@@ -2,18 +2,23 @@
 {% set title = 'Latest events' %}
 
 {% block content %}
-    <ul class="list-group">
+    <ul class="list-group timeline">
         {% for event in events %}
             <li class="list-group-item">
-                {% if event.type == 'vote' %}
-                    <a href="/users/{{ event.eventable.user.name }}">{{ event.eventable.user.name }}</a>
-                    voted <strong>{{ choice(event.eventable.question, event.eventable) }}</strong>
-                    on <a href="/requests/{{ event.eventable.question.request.id }}">{{ event.eventable.question.request.name }}</a>
-                {% elseif event.type == 'rfc_created' %}
-                    <a href="/users/{{ event.eventable.user.name }}">{{ event.eventable.authors.lists('name')|join(', ') }}</a>
-                    created RFC <a href="/requests/{{ event.eventable.id }}">{{ event.eventable.name }}</a>
-                {% endif %}
-                <span class="badge">{{ event.created_at.diffForHumans() }}</span>
+                <i class="fa fa-{{ {rfc_created: 'commenting', vote: 'thumbs-down'}[event.type] }}"></i>
+                <div>
+                    {% if event.type == 'vote' %}
+                        <a href="/users/{{ event.eventable.user.name }}">{{ event.eventable.user.name }}</a>
+                        voted <strong>{{ choice(event.eventable.question, event.eventable) }}</strong>
+                        on <a href="/requests/{{ event.eventable.question.request.id }}">{{ event.eventable.question.request.name }}</a>
+                    {% elseif event.type == 'rfc_created' %}
+                        {% for key, author in event.eventable.authors %}
+                            <a href="/users/{{ author.name }}">{{ author.name }}</a>{% if (key + 1) < event.eventable.authors.count() %},{% endif %}
+                        {% endfor %}
+                        created RFC <a href="/requests/{{ event.eventable.id }}">{{ event.eventable.name }}</a>
+                    {% endif %}
+                    <time datetime="{{ event.created_at }}">{{ event.created_at.diffForHumans() }}</time>
+                </div>
             </li>
         {% endfor %}
     </ul>
