--- a/resources/views/users/show.twig
+++ b/resources/views/users/show.twig
@@ -1,10 +1,10 @@
 {% extends '_layouts/layout.twig' %}
-{% set title = user.name %}
+{% set title = user.display_name %}
 
 {% block title %}
     <img class="img-circle" src="{{ gravatar.get(user.email) }}" alt="">
     <h2>
-        {{ user.name }}<br>
+        {{ user.display_name }}<br>
         <small>{{ user.full_name }}</small>
     </h2>
 {% endblock %}
