Show all authors of an RFC

--- a/resources/assets/sass/styles.scss
+++ b/resources/assets/sass/styles.scss
@@ -1,6 +1,7 @@
 @import 'utils/variables';
 @import 'base/body';
 
+@import 'components/authors';
 @import 'components/explanations';
 @import 'components/tables';
 @import 'components/timeline';
