--- a/resources/assets/sass/components/_timeline.scss
+++ b/resources/assets/sass/components/_timeline.scss
@@ -3,8 +3,8 @@
 
     display: flex;
     flex-direction:  column;
-    width: 35%;
-    margin: auto;
+    width: auto;
+    padding-left: 30%;
 
     .list-group-item {
         margin: 1.5rem 0;
