--- a/resources/views/events/index.twig
+++ b/resources/views/events/index.twig
@@ -2,6 +2,7 @@
 {% set title = 'Latest events' %}
 {% set icons = {
     rfc_created: 'commenting',
+    rfc_status: 'history',
     vote_up: 'thumbs-up',
     vote_down: 'thumbs-down',
 } %}
@@ -21,6 +22,9 @@
                             <a href="/users/{{ author.id }}">{{ author.display_name }}</a>{% if (key + 1) < event.eventable.authors.count() %},{% endif %}
                         {% endfor %}
                         created RFC <a href="/requests/{{ event.eventable.id }}">{{ event.eventable.name }}</a>
+                    {% elseif event.type == 'rfc_status' %}
+                        RFC <a href="/requests/{{ event.eventable.id }}">{{ event.eventable.name }}</a>
+                        changed status to <strong>{{ event.eventable.statusLabel(event.metadata.new_status) }}</strong>
                     {% endif %}
                     <time datetime="{{ event.created_at }}">{{ event.created_at.diffForHumans() }}</time>
                 </div>
