--- a/resources/assets/sass/styles.scss
+++ b/resources/assets/sass/styles.scss
@@ -2,6 +2,7 @@
 @import 'base/body';
 
 @import 'components/authors';
+@import 'components/comments';
 @import 'components/explanations';
 @import 'components/tables';
 @import 'components/timeline';
