Add comments to timeline
Signed-off-by: Maxime Fabre <ehtnam6@gmail.com>

--- a/resources/assets/sass/components/_comments.scss
+++ b/resources/assets/sass/components/_comments.scss
@@ -3,10 +3,6 @@
     flex-direction: row;
     align-items: center;;
 
-    .media-left,
-    .media-body {
-    }
-
     .media-left {
         padding: 1rem;
         padding-right: 3rem;
@@ -15,8 +11,7 @@
     .media-heading {
         padding-bottom: 0.5em;
         border-bottom: 2px solid darken($color-grey, 10);
-        margin: 0;
-        margin-bottom: 2rem;
+        margin: 0 0 2rem;
     }
 
     .media-body {
