Show number of comments in RFC table

--- a/resources/views/_partials/tables/requests.twig
+++ b/resources/views/_partials/tables/requests.twig
@@ -9,6 +9,7 @@
         <tr>
             <th>Name</th>
             <th class="text-right"># of votes</th>
+            <th class="text-right"># of comments</th>
             <th class="text-right">Approval %</th>
             <th class="text-center">Last update</th>
             <th class="text-center">Status</th>
@@ -21,6 +22,7 @@
                     <a href="/requests/{{ request.id }}">{{ request.name }}</a>
                 </td>
                 <td class="text-right">{{ request.votes.count() }}</td>
+                <td class="text-right">{{ request.comments.count() }}</td>
                 <td class="text-right">{{ percentage(request.approval) }}</td>
                 <td class="text-center">{{ request.created_at.toDateString() }}</td>
                 <td class="text-center {{ ['danger', '', 'success'][request.status] }}">{{ request.status_label }}</td>
