--- a/resources/assets/sass/components/_comments.scss
+++ b/resources/assets/sass/components/_comments.scss
@@ -21,6 +21,8 @@
     }
 
     blockquote {
-        display: none;
+        padding: 0 1em;
+        font-size: 1em;
+        border-left: 3px solid rgba(black, 0.25);
     }
 }
