--- a/resources/views/requests/show.twig
+++ b/resources/views/requests/show.twig
@@ -1,5 +1,6 @@
 {% extends '_layouts/layout.twig' %}
 {% set title = request.name %}
+{% set fluid = false %}
 
 {% block title %}
     <div class="authors">
