--- a/resources/views/users/show.twig
+++ b/resources/views/users/show.twig
@@ -1,5 +1,6 @@
 {% extends '_layouts/layout.twig' %}
 {% set title = user.display_name %}
+{% set fluid = false %}
 
 {% block title %}
     {% include '_partials/user.twig' %}
