--- a/resources/assets/sass/layout/_header.scss
+++ b/resources/assets/sass/layout/_header.scss
@@ -1,5 +1,6 @@
 .layout-header {
-    background: lighten(#2c3e50, 15);
+    background: lighten(#2C3E50, 15) url('../img/claw.png') no-repeat -50px;
+    background-size: auto 150%;
     padding: 5rem;
     margin: 0;
 
