--- a/resources/views/_partials/tables/requests.twig
+++ b/resources/views/_partials/tables/requests.twig
@@ -25,7 +25,7 @@
                 <td class="text-right">{{ request.comments.count() }}</td>
                 <td class="text-right">{{ percentage(request.approval) }}</td>
                 <td class="text-center">{{ request.created_at.toDateString() }}</td>
-                <td class="text-center {{ ['danger', '', 'success'][request.status] }}">{{ request.status_label }}</td>
+                <td class="text-center {{ ['danger', '', '', 'success'][request.status] }}">{{ request.status_label }}</td>
             </tr>
         {% endfor %}
         </tbody>
