Get RFC contents as well

--- a/resources/assets/sass/styles.scss
+++ b/resources/assets/sass/styles.scss
@@ -1,5 +1,7 @@
 @import 'utils/variables';
+
 @import 'base/body';
+@import 'base/typography';
 
 @import 'components/authors';
 @import 'components/comments';
