More work on RFC content

--- a/resources/assets/sass/layout/_content.scss
+++ b/resources/assets/sass/layout/_content.scss
@@ -1,3 +1,11 @@
 .layout-pagehead {
     margin: 4rem 0;
 }
+
+.rfc__contents {
+    h1, #vote {
+        &, & + div {
+            display: none;
+        }
+    }
+}
