--- a/resources/views/requests/show.twig
+++ b/resources/views/requests/show.twig
@@ -30,7 +30,7 @@
     </ul>
 
     <h2 class="text-center">Contents</h2>
-    <section class="contents">
+    <section class="rfc__contents">
         {{ request.contents | raw }}
     </section>
 
