Close #2 - Hide some other variations of voting section

--- a/resources/assets/sass/layout/_content.scss
+++ b/resources/assets/sass/layout/_content.scss
@@ -3,7 +3,10 @@
 }
 
 .rfc__contents {
-    h1, #vote {
+    h1,
+    #vote,
+    #votes,
+    #voting {
         &, & + div {
             display: none;
         }
