--- a/resources/assets/sass/styles.scss
+++ b/resources/assets/sass/styles.scss
@@ -2,6 +2,7 @@
 
 @import 'base/body';
 @import 'base/typography';
+@import 'base/code';
 
 @import 'components/authors';
 @import 'components/comments';
