--- a/resources/assets/sass/layout/_content.scss
+++ b/resources/assets/sass/layout/_content.scss
@@ -6,7 +6,13 @@
     h1,
     #vote,
     #votes,
-    #voting {
+    #voting,
+    #voting1,
+    #voting2,
+    #voting3,
+    #voting4,
+    #voting5,
+    #proposed_voting_choices {
         &, & + div {
             display: none;
         }
