Fix not all requests showing

--- a/resources/views/requests/index.twig
+++ b/resources/views/requests/index.twig
@@ -8,5 +8,5 @@
     </p>
 
     {% include '_partials/search.twig' %}
-    {% include '_partials/tables/requests.twig' with {requests: voted} %}
+    {% include '_partials/tables/requests.twig' %}
 {% endblock %}
